--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,22 @@ services:
     image: core:latest
     ports: 
       - 8080:8080
+    depends_on: 
+      - db
+
+  db:
+    image: mysql:5.7
+    hostname: db
+    restart: always
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_DATABASE: core
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
+    volumes:
+      - db:/var/lib/mysql
+    
+volumes:
+  db:
+    
