--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.4.4</version>
 		<relativePath/> 
 	</parent>
-	<groupId>recobook.core</groupId>
-	<artifactId>recobook-core</artifactId>
+	<groupId>recobook</groupId>
+	<artifactId>recobook</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>recobook-core</name>
+	<name>recobook</name>
 	<description>Trabalho de Conclusão de Curso - Sistema universal de recomendação de Locais</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -21,12 +21,27 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -35,6 +50,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+   				<artifactId>maven-resources-plugin</artifactId>
+    			<version>3.1.0</version>
+			</plugin>  
 		</plugins>
 	</build>
 
