--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - 8080:8080
     depends_on: 
       - db
+    environment: 
+      SERVICE_AUTH_KEY: "teste"
 
   db:
     image: mysql:5.7
