--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,14 @@ version: '3.3'
 services:
   core: 
     container_name: core
-    image: core:latest
+    build: .
     ports: 
-      - 8080:8080
-    depends_on: 
-      - db
-      - dobby
+      - 1993:1993
+    volumes: 
+        - ./src:/app
     environment: 
       SERVICE_AUTH_KEY: "teste"
+
 
   dobby: 
     container_name: dobby
