core: Criado rota para recuperaçao de senha

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,9 @@ services:
         - ./src:/app
     environment: 
       SERVICE_AUTH_KEY: "teste"
-      CLIENT_SMTP_USERNAME: ""
-      CLIENT_SMTP_PASSWORD: ""
-      CLIENT_SMTP_EMAIL: ""
+      SENDGRID_EMAIL: ""
+      SENDGRID_TOKEN: ""
+
       
 
 
