--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   core: 
     container_name: core
-    build: .
+    image: recobook/core:latest
     ports: 
       - 8000:8000
     volumes: 
